--- a/www/drivelog.html
+++ b/www/drivelog.html
@@ -37,23 +37,21 @@
 
      </script>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Mobile ad -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:50px"
+     data-ad-client="ca-pub-3129291903570962"
+     data-ad-slot="5285260569"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
      <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
      <script type='text/javascript' src='js/drivelog.js'></script>
     </head>
 
     <body>
-<div id="ad">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Mobile text ad -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:320px;height:50px"
-     data-ad-client="ca-pub-3129291903570962"
-     data-ad-slot="2691720966"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
         <script>
         $(document).ready(function(){
                 lastreport() ;
